plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

def javaFXVersion = '21'
def osName = System.getProperty("os.name").toLowerCase()
def platform = osName.contains("win") ? "win" :
               osName.contains("mac") ? "mac" : "linux"

dependencies {
    implementation "org.openjfx:javafx-base:${javaFXVersion}:${platform}"
    implementation "org.openjfx:javafx-controls:${javaFXVersion}:${platform}"
    implementation "org.openjfx:javafx-graphics:${javaFXVersion}:${platform}"
    implementation "org.openjfx:javafx-fxml:${javaFXVersion}:${platform}"
}

application {
    mainClass = 'com.data_structures_visualizer.MainApp'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaExec) {
    jvmArgs = [
        "--module-path", configurations.runtimeClasspath.asPath,
        "--add-modules", "javafx.controls,javafx.fxml,javafx.graphics"
    ]
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs += [
        "--module-path", configurations.compileClasspath.asPath,
        "--add-modules", "javafx.controls,javafx.fxml,javafx.graphics"
    ]
}